--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "~7.0",
+        "php": "^7.0|^8.0",
         "yiisoft/yii2": "~2.0.13",
         "bower-asset/jqvmap": "~1.5.1"
     },
